# fpt-scraping

./: Cargo.toml  README.md
src/: main.rs  news.rs
