[package]
name = "fpt_scraping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
scraper = "0.17.1"
tokio = { version = "1.33.0", features = ["full"] }
headless_chrome = {git = 'https://github.com/atroche/rust-headless-chrome', features = ['fetch']}
chrono = { version = "0.4.33" }
dirs = "5.0.1"
notify-rust = "4.10.0"
